--- a/Relisten/IGShowCell.xib
+++ b/Relisten/IGShowCell.xib
@@ -1,77 +1,91 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="70" id="XFL-aP-PZG" customClass="IGShowCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="77"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="XFL-aP-PZG" id="COE-tE-53f">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="69.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="69"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" id="oRf-GR-3bV">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1966-11-01" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="3XR-uc-wT1">
-                                <rect key="frame" x="17" y="7" width="159" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SBD" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="FCQ-Vh-sZf">
-                                <rect key="frame" x="117" y="9" width="32" height="18"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.0070205766110000003" green="0.55978260869999996" blue="0.1685694089" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <view tag="3" contentMode="scaleToFill" id="jok-RX-4oj" customClass="AXRatingView">
-                                <rect key="frame" x="178" y="5" width="114" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                            </view>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="4" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Various - San Francisco, CA. Various - San Francisco, CA. " lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="YdB-3u-WXv" userLabel="Label - Various - San Francisco, CA. Various - San Francisco, CA.">
-                                <rect key="frame" x="17" y="29" width="195" height="34"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="288 hours" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="z3C-O2-kNp">
-                                <rect key="frame" x="214.00000163250493" y="29" width="72" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="6" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1 recording" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="OUd-70-p9I">
-                                <rect key="frame" x="209.0000016325049" y="43" width="77" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1966-11-01" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3XR-uc-wT1">
+                        <rect key="frame" x="8" y="8" width="90" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="XXq-r1-EAD"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <view tag="3" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jok-RX-4oj" customClass="AXRatingView">
+                        <rect key="frame" x="202" y="5" width="110" height="27"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="110" id="FeD-Kj-SEL"/>
+                            <constraint firstAttribute="height" constant="27" id="qkV-Cy-2yq"/>
+                        </constraints>
                     </view>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="4" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Various - San Francisco, CA. Various - San Francisco, CA. " lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YdB-3u-WXv" userLabel="Label - Various - San Francisco, CA. Various - San Francisco, CA.">
+                        <rect key="frame" x="8" y="36" width="195" height="32"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="195" id="cuZ-Ys-bcy"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z3C-O2-kNp">
+                        <rect key="frame" x="232" y="35" width="80" height="33"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="80" id="DtF-j8-0bc"/>
+                        </constraints>
+                        <string key="text">288 hours
+1 recordings</string>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SBD" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FCQ-Vh-sZf">
+                        <rect key="frame" x="106" y="10" width="32" height="18"/>
+                        <color key="backgroundColor" red="0.0070205766110000003" green="0.55978260869999996" blue="0.1685694089" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="18" id="QVL-1S-NUR"/>
+                            <constraint firstAttribute="width" constant="32" id="ga1-Sj-vrT"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="z3C-O2-kNp" firstAttribute="bottom" secondItem="COE-tE-53f" secondAttribute="bottomMargin" id="2bp-RT-9aa"/>
+                    <constraint firstItem="YdB-3u-WXv" firstAttribute="top" secondItem="3XR-uc-wT1" secondAttribute="bottom" constant="7" id="7pJ-PW-qqv"/>
+                    <constraint firstItem="z3C-O2-kNp" firstAttribute="trailing" secondItem="COE-tE-53f" secondAttribute="trailingMargin" id="9Yo-3Z-ubX"/>
+                    <constraint firstItem="FCQ-Vh-sZf" firstAttribute="top" secondItem="COE-tE-53f" secondAttribute="topMargin" constant="2" id="PIA-jn-LYN"/>
+                    <constraint firstItem="YdB-3u-WXv" firstAttribute="leading" secondItem="COE-tE-53f" secondAttribute="leadingMargin" id="Ukb-Wb-kaa"/>
+                    <constraint firstItem="jok-RX-4oj" firstAttribute="trailing" secondItem="COE-tE-53f" secondAttribute="trailingMargin" id="WaA-ni-7IG"/>
+                    <constraint firstItem="FCQ-Vh-sZf" firstAttribute="leading" secondItem="3XR-uc-wT1" secondAttribute="trailing" constant="8" id="WbS-QQ-bZQ"/>
+                    <constraint firstItem="YdB-3u-WXv" firstAttribute="bottom" secondItem="COE-tE-53f" secondAttribute="bottomMargin" id="bIj-r8-mIP"/>
+                    <constraint firstItem="3XR-uc-wT1" firstAttribute="leading" secondItem="COE-tE-53f" secondAttribute="leadingMargin" id="dxK-B1-6T4"/>
+                    <constraint firstItem="jok-RX-4oj" firstAttribute="top" secondItem="COE-tE-53f" secondAttribute="topMargin" constant="-3" id="hlR-FE-XoE"/>
+                    <constraint firstItem="3XR-uc-wT1" firstAttribute="top" secondItem="COE-tE-53f" secondAttribute="topMargin" id="r3i-Ju-XG1"/>
+                    <constraint firstItem="z3C-O2-kNp" firstAttribute="top" secondItem="jok-RX-4oj" secondAttribute="bottom" constant="3" id="w8z-On-GME"/>
+                </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="dateLabel" destination="3XR-uc-wT1" id="e3w-Qf-zZs"/>
                 <outlet property="durationLabel" destination="z3C-O2-kNp" id="teq-hV-pLi"/>
                 <outlet property="ratingView" destination="jok-RX-4oj" id="tTm-dE-L4w"/>
-                <outlet property="recordingCountLabel" destination="OUd-70-p9I" id="PNB-HE-lVv"/>
                 <outlet property="sbdLabel" destination="FCQ-Vh-sZf" id="MVs-by-oxJ"/>
                 <outlet property="venueLabel" destination="YdB-3u-WXv" id="BPt-vR-miW"/>
             </connections>
-            <point key="canvasLocation" x="288" y="552.5"/>
+            <point key="canvasLocation" x="288" y="552"/>
         </tableViewCell>
     </objects>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
